# cdp-stablecoin-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  alembic.ini  config.example.env  demo_api.py  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251002_0001_init_positions.py  20251002_0002_add_risk_snapshots.py  20251002_0003_add_chain_events.py
app/: main.py
app/api/routes/: analytics.py  batch.py  events.py  health.py  liquidation.py  metrics.py  monitor.py  positions.py
app/clients/: price_oracle.py
app/core/: config.py  logging.py  metrics.py  rate_limiting.py  request_id.py
app/db/: base.py  session.py
app/models/: analytics.py  chain_event.py  position.py
app/schemas/: analytics.py  batch.py  liquidation.py  metrics.py  position.py
app/services/: analytics.py  indexer.py  liquidation.py  monitor.py  risk.py
docs/: ARCHITECTURE.md
tests/: conftest.py  test_health_endpoint.py
tests/api/: test_analytics_api.py  test_events_api.py  test_liquidation_api.py  test_liquidation_integration.py  test_monitor_api.py  test_positions_api.py  test_positions_integration.py
tests/services/: test_risk_eval.py
