[tool.poetry]
name = "cdp-skill-demo-backend"
version = "0.1.0"
description = "Demo FastAPI backend showcasing a liquidation service for a CDP system"
authors = ["Valery <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
sqlalchemy = {version = "^2.0.36", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
httpx = "^0.27.2"
web3 = "^7.3.0"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
start = "app.main:run"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM", "W"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
